Add new contact details to "impressum"

--- a/Impressum.html
+++ b/Impressum.html
@@ -29,17 +29,18 @@
 		<main class="main">
 			<div class="impressum">
 				<h1>Impressum</h1>
-				<h2>Daniela Küster - Front End Web Developer</h2>
-                <ul class="adresse">
-                    <li>Straße</li>
-                    <li>PLZ Stadt</li>
-                    <li>
-                        <i class="fa fa-fw fa-phone"></i> Telefonnummer
-                    </li>
-                    <li>
-                        <a href="#">E-Mail</a>
-                    </li>
-                </ul>
+				<h2>Angaben gemäß § 5 TMG</h2>
+				<ul class="impressum-adresse">
+					<li>Daniela Küster</li>
+					<li>Taunusstr. 3</li>
+					<li>71083 Herrenberg</li>
+					<li>Deutschland</li>
+				</ul>
+				<h2>Kontakt</h2>
+				<ul class="impressum-kontakt">
+					<li>E-Mail: daniela.kuester@web.de</li>
+					<li>Telefonnummer auf Anfrage</li>
+				</ul>
 			</div>
 			<div class="rechtliche-hinweise">
                 <h2>Rechtliche Hinweise</h2>
