--- a/Impressum.html
+++ b/Impressum.html
@@ -42,29 +42,49 @@
 					<li>Telefonnummer auf Anfrage</li>
 				</ul>
 			</div>
-			<div class="rechtliche-hinweise">
-                <h2>Rechtliche Hinweise</h2>
+			<div class="haftung-fuer-inhalte">
+                <h3>Haftung für Inhalte</h3>
                 <p>
-                    Daniela Küster übernimmt keinerlei Gewähr für die Aktualität, Korrektheit, Vollständigkeit oder Qualität
-                    der bereitgestellten Informationen. Haftungsansprüche gegen Daniela Küster, die sich auf Schäden materieller
-                    oder ideeller Art beziehen, welche durch die Nutzung der dargebotenen Informationen bzw. durch die Nutzung fehlerhafter und unvollständiger
-                    Informationen verursacht wurden sind grundsätzlich ausgeschlossen, sofern seitens Daniela Küster kein nachweislich
-                    vorsätzliches oder grob fahrlässiges Verschulden vorliegt. Alle Angebote sind freibleibend und unverbindlich. Daniela Küster
-                    behält es sich ausdrücklich vor, Teile der Seiten oder das gesamte Angebot ohne gesonderte Ankündigung zu verändern, zu ergänzen, zu löschen
-                    oder die Veröffentlichung zeitweise oder endgültig einzustellen.
+					Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich.
+					Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen
+					oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen.
                 </p>
                 <p>
-                    Haftungshinweis: Trotz sorgfältiger inhaltlicher Kontrolle übernehmen wir keine Haftung für die Inhalte externer Links.
-                    Für den Inhalt der verlinkten Seiten sind ausschließlich deren Betreiber verantwortlich. 
+					Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt.
+					Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich.
+					Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.
                 </p>
+			</div>
+			<div class="haftung-fuer-links">
+				<h3>Haftung für Links</h3>
 				<p>
-					Von etwaigen illegalen, persönlichkeitsverletzenden, moralisch oder ethisch anstößigen Inhalten distanziert sich Daniela Küster
-					in aller Deutlichkeit. Bitte Informieren Sie uns, wenn wir auf unseren Seiten ein solches Element haben.
-                </p>
-                <p>
-                    Bei einer Verletzung von fremden Urheberrecht oder sonstiger Rechte durch den Seitenbetreiber oder eines Autors benachrichtigen Sie uns bitte.
-                    Bei Bestehen einer Verletzung wird diese umgehend beseitigt.
-                </p>
+					Unser Angebot enthält Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben.
+					Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen.
+					Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich.
+					Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft.
+					Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar.
+				</p>
+				<p>
+					Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar.
+					Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.
+				</p>
+			</div>
+			<div class="urheberrecht">
+				<h3>Urheberrecht</h3>
+				<p>
+					Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht.
+					Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen
+					der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers.
+					Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet.
+				</p>
+				<p>
+					Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet.
+					Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden,
+					bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.
+				</p>
+				<p>
+					Quelle: <a href="https://www.e-recht24.de/impressum-generator.html">https://www.e-recht24.de/impressum-generator.html</a>
+				</p>
 			</div>
 		</main>
 
